# Commonsense-Reasoning-Bot

./: .gitignore  App.py  Makefile  README.md  pyproject.toml  requirements.txt
App/: App.py  CameraInput.py  Simulator.py  SpatialGraph.py  Util.py  VideoAnalysis.py
App/Data/: Restaurant_Large.sdf  Restaurant_Large.sparc
App/Data/Alfred/: Alfred.blend
App/Data/Alfred/stand/: Alfred.mtl
App/Default/right_hand/: data.txt
App/Super/right_hand/: data.txt
AppHandClassifier/: PoseClassifier.py  README.md  Util.py  VideoAnalysis.py  VideoOverlay.py  requirements.txt
AppHandClassifier/Models/: FirstModel.h5  SimpleRightHandModel.h5
AppHandClassifier/Models/RestaurantSignalsExtended/: RestaurantSignalsExtended_left.h5  RestaurantSignalsExtended_right.h5  class.txt
AppHandClassifier/Super/right_hand/: data.txt
AppSimulator/: App.py  AppSimulator.py  CameraInput.py  CommunicationASP.py  ProgramASP - Copy.sparc  ProgramASP.sparc  Simulator.py  SpatialGraph.py  StartSim.bat  Util.py  VideoAnalysis.py  __main__.py  requirements.txt  testFileASP.sparc
AppSimulator/ASP/: CommunicationASP.py  ProgramASP - Copy.sparc  ProgramASP.sparc  runSparc.bat
AppSimulator/Data/: Restaurant_Large.sparc
AppSimulator/Data/Alfred/: AlfredSeated.blend
AppSimulator/ProgramASP/: CommunicationASP.py  ProgramASP.sparc  restaurant_test2.sparc  test_communication.sparc
commonsense_reasoning_bot/: Simulator.py  SpatialGraph.py  Util.py  __main__.py
commonsense_reasoning_bot/ASP/: CommunicationASP.py  ProgramASP.sparc
commonsense_reasoning_bot/Data/: Restaurant_Large.sparc
(+16 files in other folders)
