[tool.poetry]
name = "Commonsense-Reasoning-Bot"
version = "0.1.0"
description = ""
authors = ["ArthurFDLR <arthfind@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pybullet = "^3.0.6"
qibullet = "^1.4.2"
PyQt5 = "^5.15.1"
pyqtgraph = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
